--- a/app/src/App.css
+++ b/app/src/App.css
@@ -26,3 +26,18 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+.ajaxresults{
+  padding:30px;
+  margin:30px;
+  border:solid 1px #eee;
+}
+.ajaxresults ul{
+  list-style:none;
+  text-align:left;
+}
+
+.ajaxresults li{
+   
+  padding:10px;
+  letter-spacing:.05em;
+}
